Fix alignment for text based quiz

--- a/css/flashcard-style.css
+++ b/css/flashcard-style.css
@@ -98,6 +98,7 @@ body.ll-tools-flashcard-open {
     align-items: center; 
     max-width: 700px;
     width: 100%;
+    min-height: 320px;
 }
 
 .flashcard-container {
